<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MainBoard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity" >

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="?attr/actionBarSize" >

        <LinearLayout
            android:id="@+id/boxList"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:animateLayoutChanges="true"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <RelativeLayout
                android:id="@+id/questionBox"
                style="@style/Box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/questionText"
                    style="@style/BoxText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/test_question" />

                <TextView
                    style="@style/QuestionBoxTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text="@string/question_title" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/exampleBox"
                style="@style/Box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/exampleText"
                    style="@style/BoxText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/test_example" />

                <TextView
                    style="@style/ExampleBoxTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text="@string/example_title" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/hintBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/hintText"
                    style="@style/BoxText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/test_hint" />

                <TextView
                    style="@style/HintBoxTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text="@string/hint_title" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/answerBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/answerText"
                    style="@style/BoxText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/test_answer" />

                <TextView
                    style="@style/AnswerBoxTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text="@string/answer_title" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/lowerBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:layout_margin="0px" >

        <TextView
            android:id="@+id/hintButton"
            style="@style/HintButton"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/answerButton"
            style="@style/AnswerButton"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/hintButton" />

        <TextView
            android:id="@+id/questionButton"
            style="@style/QuestionButton"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/hintButton"
            android:visibility="gone" />
    </RelativeLayout>

</RelativeLayout>